# spc-rs

./: .gitignore  flake.nix
crate/: Cargo.toml  README.md
crate/crates/cli/: Cargo.toml
crate/crates/cli/src/: main.rs
crate/crates/core/: Cargo.toml
crate/crates/core/src/: logblock.rs  parse.rs  units.rs
crate/crates/core/src/header/: flags.rs  mod.rs  subheader.rs
crate/src/: lex.rs  lib.rs  log.rs  main.rs  parse.rs  units.rs
crate/src/block/: mod.rs  variables.rs
crate/src/header/: datetime.rs  flags.rs  mod.rs  mod_old.rs  subheader.rs  zerocopy_subheader.rs
crate/src/write/: mod.rs
crate/test_data/header/: BZH5DDC.SPC  BZH5DDL.SPC  BZH5DEM.SPC  BZH5DIP.SPC  BZH5DK.SPC  BZH5DN.SPC  BZH5DNA.SPC  BZH5DRP.SPC  C6D6DC98.SPC  C6D6DL98.SPC  C6D6EM98.SPC  C6D6IP98.SPC  C6D6K98.SPC  C6D6N98.SPC  C6D6NA98.SPC  C6D6RP98.SPC  C6H6DC04.SPC  C6H6DL04.SPC  C6H6EM04.SPC  C6H6IP04.SPC  C6H6NA04.SPC  C6H6RP04.SPC  C6H6n04.SPC  WTERDC95HEADER.SPC  WTERDL95HEADER.SPC  WTEREM95HEADER.SPC  WTERK95HEADER.SPC  WTERN95HEADER.SPC
crate/test_data/txt/C6D6ASC/: C6D6DC98.txt  C6D6DL98.txt  C6D6Em98.txt  C6D6IP98.txt  C6D6K98.txt  C6D6N98.txt  C6D6NA98.txt  C6D6RP98.txt
crate/test_data/txt/C6H5DASC/: BzH5DDC.txt  BzH5DDL.txt  BzH5DEm.txt  BzH5DIP.txt  BzH5DK.txt  BzH5DN.txt  BzH5DNA.txt  BzH5DRP.txt
crate/test_data/txt/C6H6ASC/: C6H6DC04.txt  C6H6DL04.txt  C6H6Em04.txt  C6H6IP04.txt  C6H6K04.txt  C6H6N04.txt  C6H6NA04.txt  C6H6RP04.txt
crate/test_data/txt/tolueneASC/: toluenEm.txt  toluenIP.txt  toluenK.txt  toluenN.txt  toluendc.txt  toluendl.txt  toluenna.txt  toluenrp.txt
