[package]
name = "spcrs"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
exclude = [".github/", "/ci/"]
description = "A command-line tool for processing and analyzing data from SPC files."
license = "MIT"

[workspace]
resolver = "2"
members = ["crates/*"]

[[bin]]
name = "spcrs"
path = "crates/cli/src/main.rs"

[workspace.dependencies]
log = "0.4.26"
miette = { version = "7.5.0", features = ["fancy"] }

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
fs-err = "3.1.0"
log.workspace = true
miette = { workspace = true, features = ["fancy"] }
spc-core = { path = "crates/core" }
