[package]
name = "spc-cli"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
exclude = [".github/", "/ci/"]


[dependencies]
camino = "1.1.9"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
fs-err = "3.1.0"
log.workspace = true
miette = { workspace = true, features = ["fancy"] }
spc-core = { path = "../core" }
