[package]
name = "spc-core"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Gubbin <cgubbin@sensoriumtl.com>"]
exclude = [".github/", "/ci/"]

[lib]
bench = false


[dependencies]
bytes = "1.10.1"
bytes-stream = "0.0.3"
camino = "1.1.9"
chrono = "0.4.40"
csv = "1.3.1"
env_logger = "0.11.7"
fs-err = "3.1.0"
log = "0.4.26"
miette = { workspace = true, features = ["fancy"] }
regex = "1.11.1"
scroll = { version = "0.12.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
zerocopy = { version = "0.8.24", features = ["derive", "std"] }

[dev-dependencies]
approx = "0.5.1"
